fixed amazon pay button on mobile

--- a/100-Prozent-Ausspielungen/Sprint-AB-08.3-Warenkorb-Ersparnisse/variation-01/style.less
+++ b/100-Prozent-Ausspielungen/Sprint-AB-08.3-Warenkorb-Ersparnisse/variation-01/style.less
@@ -19,3 +19,11 @@
 .kk_border_container {
     margin-bottom: 30px 
 }
+
+@media screen and (max-width: 639px) {
+
+    #amazon-pay-button {
+        width: 100% !important;
+    }
+
+}
